--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,17 +11,15 @@ jobs:
       BASEROW_USER: ${{secrets.BASEROW_USER}}
       BASEROW_PW: ${{secrets.BASEROW_PW}}
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+    - name: Check out source repository
+      uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.8
+        python-version: "3.10"
     - name: Install dependencies
       run: |
-        pip install --upgrade --upgrade-strategy eager -r requirements_dev.txt
-    - name: Install actual package
-      run: |
-        pip install -e .
+        pip install --upgrade --upgrade-strategy eager -r requirements.txt
     - name: Run tests
       run: coverage run -m pytest -v
     - name: Create Coverage Report
